* Trimmed down event data that gets sent to UI via longpoll to improve performance
* Improved REST error feedback in Response headers and log file
* Upgrade Jetty to 9.2.12.v20150709
* Adding Spring Security
* Jetty JSP Engine configurable/tunable via env.properties
* Fixed Purge Override bug where data source purge override was not being respected.

*Version 2.6.4*
* Improved feedback for Data Point Import via CSV

*Version 2.6.2*
* Fixed MySQL bug when bulk setting data point permisisons
* Fixed bug where 404 errors were redirecting the user to the login page.
* Discarding NaN values when discarding extreme values logging property is set for Numeric points.

*Version 2.6.0*
* Added ability to override web.xml via placing a modified file at overrides/web/web.xml
* Added ability to enhance the base web.xml by placing override-web.xml into overrides/web/override-web.xml
* Added new permission groups to replace legacy permissions
* Upgraded startup/shutdown/restart scripts to log to logs/ma-script.log
* Improved reliability of scripts to stop and start Mango
* Adding template system to template Data Point creation.
* Data Point Edit page now changes Point Settings options when data type is changed
* Added CSV export feature for all Mango elements to be exported and imported from a CSV definition, not all elements yet support this feature
* Added new Module Element Definitions for Templates, Rest Models and Rest JSON deserialization so new Modules can leverage these features
* Added ability for Data Source modules to allow exporting of their data points as CSV and JSON
* Added new states for Modules to use: Install and Upgrade
* Improved Scripting functionality by streamlining old system and adding new Utilities for Data Point and Data Source management
* Integration of RQL parsing via AST
* Various security enhancements
* Upgrade AmCharts to 3.17.2

*Version 2.5.2*
* Added ability to check for upgrades, and install upgrades and new modules locally