@@ -89,6 +89,7 @@ distributor=IA
 web.threads.msIdleTimeout=10000
 web.threads.minimum=10
 web.threads.maximum=200
+web.websocket.pingTimeoutMs=10000
 
 #Jetty JSP Configuration
 # See here for options: http://www.eclipse.org/jetty/documentation/9.2.10.v20150310/configuring-jsp.html
